# stuntcat

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  main.py  requirements.dev.txt  requirements.txt  run_game.py  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
lib/: game.py
lib/scenes/: __init__.py  scene.py
stuntcat/: __init__.py  __main__.py  cli.py  game.py  gifmaker.py  main.py  resources.py
stuntcat/data/: aneasterchicken.txt
stuntcat/data/maps/: untitled.tmx
stuntcat/scenes/: __init__.py  cat3.py  elephant.py  flying_objects.py  gameover.py  loading.py  news.py  scene.py  settings.py
stuntcat/scenes/platformer/: __init__.py  actions.py  event_handling.py  model.py  platformer.py  simplefsm.py  sprite.py  unicyclecat.py
stuntcat/scenes/unisharklazer/: __init__.py  cat.py  elephant.py  flying_objects.py  shark.py
tests/: test_first.py
