[metadata]
license_files = LICENSE.txt

[bdist_wheel]
universal=1



## http://coverage.readthedocs.io/en/latest/config.html
#[coverage:run]
#timid = True

## http://pytest.org/latest/customize.html#adding-default-options
[tool:pytest]
addopts=-v --cov stuntcat stuntcat/ tests/

## http://mypy.readthedocs.io/en/latest/config_file.html
#[mypy]
#python_version = 2.7

#[flake8]
#max-line-length = 120
#max-complexity = 10
#exclude = build,dist,docs/conf.py,somepackage/migrations,*.egg-info

[pylint.MASTER]
extension-pkg-whitelist=pygame

[pylint.MESSAGES CONTROL]
disable=fixme

[pylint.DESIGN]
max-attributes=12
